--- a/pwe.gr8.com/index.html
+++ b/pwe.gr8.com/index.html
@@ -12,46 +12,46 @@
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="57x57"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-57x57.png">
+        href="favicons/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-60x60.png">
+        href="favicons/apple-touch-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-72x72.png">
+        href="favicons/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-76x76.png">
+        href="favicons/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="114x114"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-114x114.png">
+        href="favicons/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="120x120"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-120x120.png">
+        href="favicons/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="144x144"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-144x144.png">
+        href="favicons/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-152x152.png">
+        href="favicons/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/apple-touch-icon-180x180.png">
+        href="favicons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/favicon-32x32.png" sizes="32x32">
+        href="favicons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/favicon-194x194.png" sizes="194x194">
+        href="favicons/favicon-194x194.png" sizes="194x194">
     <link rel="icon" type="image/png"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/favicon-96x96.png" sizes="96x96">
+        href="favicons/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/android-chrome-192x192.png"
+        href="favicons/android-chrome-192x192.png"
         sizes="192x192">
     <link rel="icon" type="image/png"
-        href="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/favicon-16x16.png" sizes="16x16">
+        href="favicons/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="https://us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/manifest.json">
     <link rel="shortcut icon"
         href="https://us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#ff0000">
     <meta name="msapplication-TileImage"
-        content="../us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/mstile-144x144.png">
+        content="favicons/mstile-144x144.png">
     <meta name="msapplication-config"
         content="https://us-as.gr-cdn.com/images/squeeze-page/_external/various/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="../us-as.gr-cdn.com/javascripts/core/lps/dist/reset-styles.966123715ae0a33be233.css">
-    <link rel="stylesheet" href="../us-as.gr-cdn.com/javascripts/core/lps/dist/core-styles.9c25199a979776a4b0f4.css">
-    <link rel="stylesheet" href="../us-as.gr-cdn.com/javascripts/core/lps/dist/webform-styles.b84bbefdfe2052863477.css">
+    <link rel="stylesheet" href="css/reset-styles.966123715ae0a33be233.css">
+    <link rel="stylesheet" href="css/core-styles.9c25199a979776a4b0f4.css">
+    <link rel="stylesheet" href="css/webform-styles.b84bbefdfe2052863477.css">
     <link rel="stylesheet" href="images/common/templates/landing/124/1/css/style.css">
     <style id="def-mark" type="text/css">
         section#section-r3k63 [data-section="wrap"] {
@@ -123,7 +123,7 @@
         div#edi-69qqq {
             top: -310px;
             left: 23px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/03.png") 0px 0px / 117px no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/03.png") 0px 0px / 117px no-repeat;
         }
 
         div#edi-69o5p {
@@ -169,7 +169,7 @@
             left: 619px;
             width: 327.969px;
             height: 275.977px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/04.jpg") 0px 0px / 327px no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/04.jpg") 0px 0px / 327px no-repeat;
         }
 
         div#edi-9mmm6 {
@@ -193,7 +193,7 @@
             left: 43px;
             width: 127.969px;
             height: 97.9883px;
-            background: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg") 0px 0px / 132px no-repeat;
+            background: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg") 0px 0px / 132px no-repeat;
             z-index: 2;
         }
 
@@ -224,7 +224,7 @@
             left: 179px;
             width: 30px;
             height: 30px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/08.png") 0px 0px / 30px no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/08.png") 0px 0px / 30px no-repeat;
         }
 
         div#edi-9kl95 {
@@ -255,7 +255,7 @@
             left: 740px;
             width: 30px;
             height: 30px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/09.png") 0px 0px / 30px no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/09.png") 0px 0px / 30px no-repeat;
         }
 
         div#edi-ll656 img {
@@ -270,7 +270,7 @@
             left: 780px;
             width: 127.969px;
             height: 97.9883px;
-            background: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg") 0px 0px / 132px no-repeat;
+            background: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg") 0px 0px / 132px no-repeat;
             z-index: 2;
         }
 
@@ -286,7 +286,7 @@
             left: 45px;
             width: 127.969px;
             height: 97.9883px;
-            background: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg") 0px 0px / 132px no-repeat;
+            background: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg") 0px 0px / 132px no-repeat;
             z-index: 2;
         }
 
@@ -317,7 +317,7 @@
             left: 184px;
             width: 30px;
             height: 30px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/08.png") 0px 0px / 30px no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/08.png") 0px 0px / 30px no-repeat;
         }
 
         div#edi-8c6k5 {
@@ -380,7 +380,7 @@
 
         section#section-k9fmf {
             height: 678px;
-            background: url("../app.getresponse.com/images/common/templates/landing/124/1/img/01.jpg") center top no-repeat;
+            background: url("app.getresponse.com/images/common/templates/landing/124/1/img/01.jpg") center top no-repeat;
             z-index: 2;
         }
 
@@ -608,7 +608,7 @@
             top: 2170px;
             left: 185px;
             background-size: 30px;
-            background-image: url("../app.getresponse.com/images/common/templates/landing/124/1/img/08.png");
+            background-image: url("app.getresponse.com/images/common/templates/landing/124/1/img/08.png");
             background-position: 0px 0px;
             background-repeat: no-repeat;
         }
@@ -622,7 +622,7 @@
             top: 1986px;
             left: 136px;
             background-size: 132px;
-            background-image: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg");
+            background-image: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg");
             background-position: 0px 0px;
             background-repeat: no-repeat;
             z-index: 2;
@@ -637,7 +637,7 @@
             top: 1750px;
             left: 136px;
             background-size: 132px;
-            background-image: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg");
+            background-image: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg");
             background-position: 0px 0px;
             background-repeat: no-repeat;
             z-index: 2;
@@ -652,7 +652,7 @@
             top: 1899px;
             left: 185px;
             background-size: 30px;
-            background-image: url("../app.getresponse.com/images/common/templates/landing/124/1/img/09.png");
+            background-image: url("app.getresponse.com/images/common/templates/landing/124/1/img/09.png");
             background-position: 0px 0px;
             background-repeat: no-repeat;
         }
@@ -709,7 +709,7 @@
             top: 1660px;
             left: 185px;
             background-size: 30px;
-            background-image: url("../app.getresponse.com/images/common/templates/landing/124/1/img/08.png");
+            background-image: url("app.getresponse.com/images/common/templates/landing/124/1/img/08.png");
             background-position: 0px 0px;
             background-repeat: no-repeat;
         }
@@ -723,7 +723,7 @@
             top: 1466px;
             left: 130px;
             background-size: 132px;
-            background-image: url("../us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg");
+            background-image: url("us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg");
             background-position: 0px 0px;
             background-repeat: no-repeat;
             z-index: 2;
@@ -747,7 +747,7 @@
             top: 1099px;
             left: 71.1916px;
             background-size: 268.132px 226px;
-            background-image: url("../app.getresponse.com/images/common/templates/landing/124/1/img/04.jpg");
+            background-image: url("app.getresponse.com/images/common/templates/landing/124/1/img/04.jpg");
             background-position: 0px 0px;
             background-repeat: no-repeat;
             z-index: 2;
@@ -803,7 +803,7 @@
             top: 15px;
             left: 200px;
             background-size: 117px;
-            background-image: url("../app.getresponse.com/images/common/templates/landing/124/1/img/03.png");
+            background-image: url("app.getresponse.com/images/common/templates/landing/124/1/img/03.png");
             background-position: 0px 0px;
             background-repeat: no-repeat;
         }
@@ -946,7 +946,7 @@
             crypto: 'getresponse' || null
         };
     </script><!-- Getresponse Analytics -->
-    <script type="text/javascript" src="../ga.getresponse.com/script/ga9bb0.js?grid=sBDcHVU1ccXoIAQ%3D%3D"
+    <script type="text/javascript" src="ga.getresponse.com/script/ga9bb0.js?grid=sBDcHVU1ccXoIAQ%3D%3D"
         async></script>
     <!-- End Getresponse Analytics -->
 </head>
@@ -1017,12 +1017,12 @@
             <div data-editable="multimedia:image" id="edi-t695k" data-uid="edi-t695k" class="" data-draggable="true"
                 style="background: none;">
 
-                <img src="../us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg" alt="/"
+                <img src="us-ms.gr-cdn.com/getresponse-G0ddT/photos/1acdb016-3b9e-432f-b38e-6dbd093d6c53.jpg" alt="/"
                     width="132" height="90" /></div>
             <div data-editable="multimedia:image" id="edi-ll656" data-uid="edi-ll656" class="" data-draggable="true"
                 style="background: none;">
 
-                <img src="../us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg" alt="/"
+                <img src="us-ms.gr-cdn.com/getresponse-G0ddT/photos/84a153b0-2268-4a03-98de-ba45b34bc4e6.jpg" alt="/"
                     width="132" height="90" /></div>
             <div data-editable="multimedia:image" id="edi-flcfl" data-uid="edi-flcfl" class="" data-draggable="true"
                 style="background: none;">
@@ -1055,7 +1055,7 @@
             <div data-editable="multimedia:image" id="edi-fmc9m" data-uid="edi-fmc9m" class="" data-draggable="true"
                 style="background: none;">
 
-                <img src="../us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg" alt="/"
+                <img src="us-ms.gr-cdn.com/getresponse-G0ddT/photos/224db434-707f-4b66-8767-4af1200823ee.jpg" alt="/"
                     width="132" height="90" /></div>
             <div data-editable="text" id="edi-9mmm6" data-uid="edi-9mmm6" class="" data-draggable="true">
                 <div style="font-family: Lato, sans-serif; line-height: 110%; font-weight: 700; color: rgb(132, 132, 132); text-align: center;"
@@ -1138,9 +1138,9 @@
         </div>
     </section>
 </body>
-<script src="../us-as.gr-cdn.com/javascripts/core/lps/dist/manifest.a6fac3c660e12ab6b857.js"></script>
-<script src="../us-as.gr-cdn.com/javascripts/core/lps/dist/vendor.chunk.196c66778c8f4bbafafd.js"></script>
-<script src="../us-as.gr-cdn.com/javascripts/core/lps/dist/show.chunk.7129194eb0c4f7655687.js"></script>
+<script src="js/manifest.a6fac3c660e12ab6b857.js"></script>
+<script src="js/vendor.chunk.196c66778c8f4bbafafd.js"></script>
+<script src="js/show.chunk.7129194eb0c4f7655687.js"></script>
 <!-- Mirrored from pwe.gr8.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 Feb 2020 20:15:42 GMT -->
 
 </html>
